--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -5,6 +5,10 @@ body {
     width: 98vw;
     height: 100vh;
     align-items: center;
+
+    /*background-image: url("../img/background.jpg");
+    background-position: center;
+    background-size: cover; */
 }
 
 #navbar {
