--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -5,11 +5,18 @@ body {
     width: 98vw;
     height: 100vh;
     align-items: center;
-
     /*background-image: url("../img/background.jpg");
     background-position: center;
     background-size: cover; */
 }
+
+footer {
+    width: 100%;
+    color: black;
+    font-size: 18px;
+    text-align: center;
+}
+
 
 #navbar {
     width: 98vw;
