avatar added, and needed functionality

--- a/src/main/webapp/WEB-INF/jspf/directive/taglib.jspf
+++ b/src/main/webapp/WEB-INF/jspf/directive/taglib.jspf
@@ -28,6 +28,11 @@ Custom tag to work with pagination.
 ===========================================================================--%>
 <%@ taglib uri="/WEB-INF/tld/pagination.tld" prefix="pg" %>
 
+<%--===========================================================================
+Custom tag to work with avatar.
+===========================================================================--%>
+<%@ taglib tagdir="/WEB-INF/tags" prefix="av" %>
+
 
 
 
