--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -749,7 +749,9 @@ input.form-check-input{
 .personal-image {
     text-align: center;
 }
-
+.personal-image input[type="file"] {
+    display: none;
+}
 .personal-figure {
     position: relative;
     width: 120px;
@@ -768,22 +770,25 @@ input.form-check-input{
 .personal-avatar:hover {
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
 }
-
-
-.fileInput::-webkit-file-upload-button {
-    visibility: hidden;
-}
-
-.fileInput::before {
-    content: 'Select new avatar';
-    display: inline-block;
-    border: 1px solid #999;
-    border-radius: 3px;
-    padding: 5px 8px;
-    -webkit-user-select: none;
+.personal-figcaption {
     cursor: pointer;
-    color: white;
-    margin-bottom: 16px;
+    position: absolute;
+    top: 0px;
+    width: inherit;
+    height: inherit;
+    border-radius: 100%;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out .3s;
+}
+.personal-figcaption:hover {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, .5);
+}
+.personal-figcaption > img {
+    margin-top: 32.5px;
+    width: 50px;
+    height: 50px;
 }
 
 .avatar {
@@ -793,7 +798,6 @@ input.form-check-input{
     border-radius: 50%;
     cursor: pointer;
 }
-
 
 
 
