--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -17,7 +17,6 @@ footer {
     text-align: center;
 }
 
-
 #navbar {
     width: 100%;
     height: 10vh;
@@ -46,7 +45,13 @@ footer {
 }
 
 #signInText {
-    margin-top: 30px;
+
+    color: rgb(211,211,211);
+    text-align: center;
+}
+
+#forgotPasswordText {
+    margin-top: 85px;
     color: rgb(211,211,211);
 }
 
@@ -355,7 +360,7 @@ footer {
 /* Footer */
 
 #main-content {
-    min-height: calc(100vh - 120px);
+    min-height: calc(100vh - 150px);
     color: white;
 }
 
@@ -383,7 +388,11 @@ input.form-check-input{
 }
 
 #signInFormDIV {
-    min-height: calc(100vh - 140px);
+    min-height: calc(100vh - 150px);
+}
+
+#forgotPasswordDIV {
+    min-height: calc(100vh - 300px);
 }
 
 #profileFormDIV {
